--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "GENERATE_SOURCEMAP=false react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md,json}\" --config ./.prettierrc.js"
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
@@ -28,8 +31,9 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.0",
     "react-router-dom": "^6.22.0",
-    "react-scripts": "5.0.1",
-    "schema-utils": "^4.2.0"
+    "react-scripts": "^5.0.1",
+    "schema-utils": "^4.2.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
@@ -38,15 +42,33 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^10.4.16",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "postcss": "^8.4.31",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^4.9.5"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
-    ]
+      "react-app/jest",
+      "plugin:prettier/recommended"
+    ],
+    "plugins": [
+      "simple-import-sort",
+      "import"
+    ],
+    "rules": {
+      "simple-import-sort/imports": "warn",
+      "simple-import-sort/exports": "warn",
+      "import/first": "warn",
+      "import/newline-after-import": "warn",
+      "import/no-duplicates": "warn",
+      "prettier/prettier": "warn"
+    }
   },
   "browserslist": {
     "production": [
